@startuml
skinparam ClassAttributeIconSize 0

class GUI_JUZGADO
class Expediente
class Autor
class Victima
class Hecho

abstract class Circunstancia{
    #valor: int
    #num_exp: String

    +Circunstancia(int valor, String num_exp)
    +setValor(int valor): void
    +getValor(): int
    +getNum_exp(): String
}

class Agravante{
    +Agravante(int valor, String num_exp)
}

class Atenuante{
    +Atenuante(int valor, String num_exp)
}

interface Serializable

Circunstancia <|-- Agravante
Circunstancia <|-- Atenuante
Expediente "1" *-- "0...*" Circunstancia
Expediente "1" *-- "1" Autor
Expediente "1" *-- "1" Victima
Expediente "1" *-- "1" Hecho
GUI_JUZGADO "1" *-- "0...*" Expediente
Hecho "1" *--* "1" Autor
Victima "1" *--* "1" Autor
Victima "1" *--* "1" Hecho
Circunstancia "1" *--* "1" Autor
Circunstancia "1" *--* "1" Victima
Circunstancia "1" *--* "1" Hecho
Expediente <.. Serializable
Autor <.. Serializable
Victima <.. Serializable
Hecho <.. Serializable
Agravante <.. Serializable
Atenuante <.. Serializable

@enduml